###
####################################################################################
#
# CPMlib - Cartesian Partition Manager Library
# 
# Copyright (C) 2012-2014 Institute of Industrial Science, The University of Tokyo.
# All right reserved.
#
####################################################################################
###

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/reference.pdf \
    $(top_builddir)/doc/CPMlib.pdf
